--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,4 +37,4 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Deploy to web server
-        run: scp -r ${{GITHUB_WORKSPACE}}/* ${{ secrets.USER }}@${{ secrets.SERVER }}:~/public-hr
+        run: scp -r $GITHUB_WORKSPACE/* ${{ secrets.USER }}@${{ secrets.SERVER }}:~/public-hr
