--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,8 +33,8 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: echo ${GITHUB_WORKSPACE}
 
       # Runs a set of commands using the runners shell
       - name: Deploy to web server
-        run: scp -r $GITHUB_WORKSPACE/* ${{ secrets.USER }}@${{ secrets.SERVER }}:~/public-hr
+        run: scp -r ${GITHUB_WORKSPACE}/* ${{ secrets.USER }}@${{ secrets.SERVER }}:~/public-hr
