--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,8 +28,13 @@ jobs:
       - name: Install SSH Client
         run: sudo apt-get update && sudo apt-get install -y openssh-client
 
-      #- name: Set up SSH key
-      #  run: mkdir ~/.ssh && touch ~/.ssh/id_rsa && echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa
+      - name: Set up SSH key
+        run: mkdir -p ~/.ssh
+          && touch ~/.ssh/id_rsa
+          && touch ~/.ssh/known_hosts
+          && ssh-keyscan [hostname] >> ~/.ssh/known_hosts
+          && ssh-add - <<< "${{ secrets.SSH_KEY }}"
+          #&& echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa
       
       - name: Show Files
         run: ls ${GITHUB_WORKSPACE}
