--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,13 +32,13 @@ jobs:
         run: mkdir -p ~/.ssh
           && touch ~/.ssh/id_rsa
           && touch ~/.ssh/known_hosts
-          && ssh-keyscan [hostname] >> ~/.ssh/known_hosts
           && ssh-add - <<< "${{ secrets.SSH_KEY }}"
-          #&& echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa
+          # && ssh-keyscan [hostname] >> ~/.ssh/known_hosts
+          # && echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa
       
       - name: Show Files
         run: ls ${GITHUB_WORKSPACE}
 
       # Runs a set of commands using the runners shell
       - name: Deploy to web server
-        run: scp -r ${GITHUB_WORKSPACE}/* ${{ secrets.USER }}@${{ secrets.SERVER }}:~/public-html
+        run: scp -o StrictHostKeyChecking=no-r ${GITHUB_WORKSPACE}/* ${{ secrets.USER }}@${{ secrets.SERVER }}:~/public-html
