--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,9 +32,10 @@ jobs:
         run: mkdir -p ~/.ssh
           && touch ~/.ssh/id_rsa
           && touch ~/.ssh/known_hosts
-          && ssh-add - <<< "${{ secrets.SSH_KEY }}"
+          && echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa
+          # && ssh-add - <<< "${{ secrets.SSH_KEY }}"
           # && ssh-keyscan [hostname] >> ~/.ssh/known_hosts
-          # && echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa
+          
       
       - name: Show Files
         run: ls ${GITHUB_WORKSPACE}
