--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,11 +28,11 @@ jobs:
       - name: Install SSH Client
         run: sudo apt-get update && sudo apt-get install -y openssh-client
 
-      - name: Set up SSH key
-        run: mkdir -p ~/.ssh
-          && touch ~/.ssh/id_rsa
-          && touch ~/.ssh/known_hosts
-          && echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa
+   #   - name: Set up SSH key
+   #     run: mkdir -p ~/.ssh
+   #       && touch ~/.ssh/id_rsa
+   #       && touch ~/.ssh/known_hosts
+   #       && echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa
           # && ssh-add - <<< "${{ secrets.SSH_KEY }}"
           # && ssh-keyscan [hostname] >> ~/.ssh/known_hosts
           
